--- a/can_1.html
+++ b/can_1.html
@@ -6,12 +6,15 @@
 		<meta name="keywords" content="" />
 		<meta name="description" content="" />
 		<style>
-			*{margin: 0; padding: 0;}
-			#canvas
-			{
-				background: #000;
-				display: block;
-			}
+      * {
+        margin: 0;
+        padding: 0;
+      }
+
+      #canvas {
+        background: #000;
+        display: block;
+      }
 		</style>
 	</head>
 	<body>
@@ -25,7 +28,7 @@ let ctx = can.getContext('2d')
 let w = can.width = window.innerWidth
 let h = can.height = window.innerHeight
 			
-let count = 5
+let count = 30
 let drops = []
 window.onresize = function () {
   w = can.width = window.innerWidth
@@ -36,37 +39,43 @@ function Drop () {}
 
 Drop.prototype = {
   init: function () {
-    this.x = random(0, w) // 开始横坐标
+    this.x = random(w*0.1, w*0.9) // 开始横坐标
     this.y = 0  // 开始纵坐标
     this.r = 1 // 园半径
     this.color = '#0ff' // 
-    this.vy = random(4, 5)
-    this.vr = 1
-    this.a = 1
-    this.va = 0.96
-	this.l = random(h * 0.8, h * 0.9)
+    this.vy = random(3, 8) // 下落速度
+    this.vr = 0.7 // 圆的扩散速度
+    this.a = 1 // 圆的透明度
+    this.va = 0.96 // 圆的透明速度
+    this.l = random(h * 0.85, h * 0.95) // 终点
+    this.color = null;
+    this.isUpdated = false
   },
   draw: function () {
     if(this.y > this.l) {
       ctx.beginPath()
       ctx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false)
-      ctx.strokeStyle = 'rgba(0,255,255,' + this.a + ')'
+      ctx.strokeStyle = this.color.replace(/\d(?=\))/, this.a)// 'rgba(0,255,255,' + this.a + ')'
       ctx.stroke()
     } else {
-	  ctx.fillStyle = color(this.a)
-	  // ctx.rotate(this.ro);
-      ctx.fillRect(this.x, this.y, 2, 10)
+      if (this.color) {
+        ctx.fillStyle = this.color
+      } else {
+        this.color = color(this.a)
+        ctx.fillStyle = this.color
+      }
+      ctx.fillRect(this.x, this.y, 1, 10)
     }
     this.update()
   },
   update: function () {
     if(this.y < this.l) {
-		this.y += this.vy
-	  // this.x -= 2
+      this.y += this.vy
+      this.x -= this.vy / 5
     } else {
-      if(this.a > 0.03) {
+      if(this.a > 0.1) {
         this.r += this.vr
-        if(this.r > 50) {
+        if(this.r > 30) {
           this.a *= this.va
         }
       } else {
@@ -81,7 +90,7 @@ function move () {
   for(let i = 0;i < drops.length;i++) {
     drops[i].draw()
   }
-  requestAnimationFrame(move)//调用经动画，递归,请求动画帧
+  requestAnimationFrame(move) //调用经动画，递归,请求动画帧
 }
 function setup () {
   for(let i = 0;i < count;i++) {
@@ -90,8 +99,8 @@ function setup () {
         let drop = new Drop()
         drop.init()
         drops.push(drop)
-      }, j * 600)
-    }(i))//i为传入参数，代替j
+      }, j * 120)
+    }(i))
   }
 }
 function random (min, max) {
