--- a/canvas散粒子特效.html
+++ b/canvas散粒子特效.html
@@ -7,7 +7,7 @@ html {
     overflow: hidden;
 }
 canvas {
-    cursor: none;
+    /* cursor: none; */
 }
 </style>
 <canvas id=canvas></canvas>
@@ -68,9 +68,13 @@ function init() {
         vx = rand(-1, 1);
         vy = rand(-1, 1);
         r = rand(1, 3);
-        red = Math.round(rand(150, 200));
-        green = Math.round(rand(100, 255));
-        blue = Math.round(rand(180, 255));
+        // red = Math.round(rand(150, 200));
+        // green = Math.round(rand(100, 255));
+        // blue = Math.round(rand(180, 255));
+        red = Math.floor(Math.random() * 255)//random()方法可返回介于 0~1 之间的一个随机数
+        green = Math.floor(Math.random() * 255)
+        blue = Math.floor(Math.random() * 255)
+        // return 'rgba(' + r + ',' + g + ',' + b + ',' + a + ')'
         alpha = 1;
         col = "rgba(" + red + "," + green + "," + blue + "," + alpha + ")";
 
@@ -81,7 +85,7 @@ function init() {
 function bg() {
     ctx.fillStyle = "rgba(25,25,30,1)";
     ctx.fillRect(0, 0, canvas.width, canvas.height);
-    //ctx.clearRect(0, 0, canvas.width, canvas.height);
+    // ctx.clearRect(0, 0, canvas.width, canvas.height);
 }
 
 function bounce(b) {
@@ -147,7 +151,7 @@ function draw() {
 
 
     }
-    ctx.strokeStyle = (!mousedown) ? "rgba(255,255,255,1)" : "rgba(255,0,0,1)";
+    // ctx.strokeStyle = (!mousedown) ? "rgba(255,255,255,1)" : "rgba(255,0,0,1)";
 
     ctx.beginPath();
     ctx.moveTo(X, Y - 10);
